feat(project): update event systeme

--- a/src/views/about.html
+++ b/src/views/about.html
@@ -14,6 +14,6 @@
       <p id="version">Release <span>{...}</span></p>
       <p id="update"><i class="fa fa-refresh fa-spin fa-3x fa-fw"></i> Checking for new update...</p>
     </section>
-    <p id="thanks">Thank's to Ryunako &amp; Hanabi!</p>
+    <p id="thanks">Thank's to Ryunako, Hanabi &amp; Khaly!</p>
   </body>
 </html>
