--- a/src/views/css/colorpicker.css
+++ b/src/views/css/colorpicker.css
@@ -67,16 +67,43 @@ a{color: inherit;text-decoration: none;}
       }
       #minimize{ color: #FEBF3C; }
         .windows #minimize, .linux #minimize{ color: rgba(0, 0, 0, 0.35); }
+        .darkMode .windows #minimize, .darkMode .linux #minimize{ color: rgba(255, 255, 255, 0.4); }
+        .windows #minimize{
+          font-size: 0.9em;
+          position: relative;
+          top: 1px;
+        }
+        .linux #minimize{
+          font-size: 0.9em;
+          position: relative;
+          top: 3px;
+        }
       #minimize:hover{ color: #FEB219; }
         .windows #minimize:hover, .linux #minimize:hover{ color: rgba(0, 0, 0, 0.5); }
+        .darkMode .windows #minimize:hover, .darkMode .linux #minimize:hover{ color: rgba(255, 255, 255, 0.6); }
       #maximize{ color: #35CC48; }
         .windows #maximize, .linux #maximize{ color: rgba(0, 0, 0, 0.35); }
+        .darkMode .windows #maximize, .darkMode .linux #maximize{ color: rgba(255, 255, 255, 0.4); }
+        .windows #maximize{
+          font-size: 0.9em;
+          position: relative;
+          top: 2px;
+        }
+        .linux #maximize{
+          transform: rotate(45deg);
+          font-size: 0.9em;
+          position: relative;
+          top: 1px;
+        }
       #maximize:hover{ color: #32C544; }
         .windows #maximize:hover, .linux #maximize:hover{ color: rgba(0, 0, 0, 0.5); }
+        .darkMode .windows #maximize:hover, .darkMode .linux #maximize:hover{ color: rgba(255, 255, 255, 0.6); }
       #close{ color: #FC635C; }
         .windows #close{ color: rgba(0, 0, 0, 0.35); }
+        .darkMode .windows #close{ color: rgba(255, 255, 255, 0.4); }
       #close:hover{ color: #FC4B43; }
         .windows #close:hover{ color: rgba(0, 0, 0, 0.5); }
+        .windows #close:hover{ color: rgba(255, 255, 255, 0.6); }
     #tools p{
       color: rgba(0, 0, 0, 0.30);
       font-weight: bold;
@@ -277,7 +304,8 @@ progress{
   cursor: pointer;
 }
 .setRight #settings{
-  right: 80px;
+  display: none;
+  right: 110px;
 }
 
 
