feat(settings): add elements

--- a/src/views/settings.html
+++ b/src/views/settings.html
@@ -5,6 +5,15 @@
     <title>Settings Colorpicker</title>
   </head>
   <body>
-
+    <header>
+      <h1>Preferences</h1>
+    </header>
+    <h1>Colorpicker</h1>
+    <h2>Appearance</h2>
+    <section id="position">
+      <p>Change the position of icons app</p>
+      <li><img src="../ressources/position-left.png" alt="Position Left" /></li>
+      <li><img src="../ressources/position-right.png" alt="Position Right" /></li>
+    </section>
   </body>
 </html>
