feat(picker): can show pixels colors

--- a/src/views/picker.html
+++ b/src/views/picker.html
@@ -3,12 +3,47 @@
   <head>
     <meta charset="utf-8">
     <title>Picker</title>
-    <link rel="stylesheet" href="css/picker.css" />
+    <link rel="stylesheet" href="./css/picker.css" />
+    <script defer src="js/color.class.js"></script>
     <script defer src="js/picker.js"></script>
   </head>
   <body>
     <section id="picker">
-      color
+      <ul>
+        <li id="l0-0"></li>
+        <li id="l0-1"></li>
+        <li id="l0-2"></li>
+        <li id="l0-3"></li>
+        <li id="l0-4"></li>
+      </ul>
+      <ul>
+        <li id="l1-0"></li>
+        <li id="l1-1"></li>
+        <li id="l1-2"></li>
+        <li id="l1-3"></li>
+        <li id="l1-4"></li>
+      </ul>
+      <ul>
+        <li id="l2-0"></li>
+        <li id="l2-1"></li>
+        <li id="l2-2"></li>
+        <li id="l2-3"></li>
+        <li id="l2-4"></li>
+      </ul>
+      <ul>
+        <li id="l3-0"></li>
+        <li id="l3-1"></li>
+        <li id="l3-2"></li>
+        <li id="l3-3"></li>
+        <li id="l3-4"></li>
+      </ul>
+      <ul>
+        <li id="l4-0"></li>
+        <li id="l4-1"></li>
+        <li id="l4-2"></li>
+        <li id="l4-3"></li>
+        <li id="l4-4"></li>
+      </ul>
     </section>
   </body>
 </html>
