--- a/src/views/settings.html
+++ b/src/views/settings.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Settings Colorpicker</title>
+    <link rel="stylesheet" href="./css/settings.css" />
+    <script defer src="./js/settings.js"></script>
   </head>
   <body>
     <header>
