feat(settings): new icons

--- a/src/views/settings.html
+++ b/src/views/settings.html
@@ -8,9 +8,30 @@
   </head>
   <body>
     <header>
-      <h1>Preferences</h1>
+      <li id="general-tab" class="active">
+        <img src="../ressources/general-icon.png" alt="General Settings">
+        <p>General</p>
+      </li>
+      <li id="colorpicker-tab">
+        <img src="../ressources/colorpicker-icon.png" alt="Colorpicker Settings">
+        <p>Colorpicker</p>
+      </li>
+      <li id="picker-tab">
+        <img src="../ressources/picker-icon.png" alt="Picker Settings">
+        <p>Picker</p>
+      </li>
+      <li id="colorsbook-tab">
+        <img src="../ressources/colorsbook-icon.png" alt="Colorsbook Settings">
+        <p>Colorsbook</p>
+      </li>
+      <li id="about-tab">
+        <img src="../ressources/about-icon.png" alt="About Settings">
+        <p>About</p>
+      </li>
     </header>
-    <h1>Colorpicker</h1>
+    <section class="panel" id="general">
+
+    </section>
     <h2>Appearance</h2>
     <section id="position">
       <p>Change the position of icons app</p>
