--- a/src/views/css/settings.css
+++ b/src/views/css/settings.css
@@ -1,4 +1,41 @@
-body{
+body, *{
   margin: 0;
   font-family: 'Lato', sans-serif;
 }
+
+header{
+  display: flex;
+  justify-content: center;
+  padding-top: 10px;
+  background: #F1F4F8;
+  border-bottom: 1px solid #CFDAE8;
+  box-shadow: inset 0 -3px 20px -5px #CBD7E6;
+}
+  header li{
+    width: 100px;
+    margin: 0 10px;
+    padding: 10px 0;
+    border-radius: 7px 7px 0 0;
+    list-style: none;
+    text-align: center;
+    cursor: pointer;
+    transition: 0.25s;
+  }
+  header li:hover img, header li.active img{
+    margin-bottom: 4px;
+    margin-top: 0;
+  }
+  header li.active{
+    background: white;
+    box-shadow: 0 -3px 20px -5px #CBD7E6;
+  }
+    header li img{
+      transition: 0.3s;
+      margin-top: 4px;
+      width: 50%;
+    }
+    header li p{
+      margin: 2px 0;
+      font-size: 0.8em;
+      color: #2F3A4A;
+    }
