--- a/src/views/settings.html
+++ b/src/views/settings.html
@@ -32,29 +32,44 @@
     </header>
     <section class="panel active" id="general-tab">
       <h2>General</h2>
-      <p>No settings here for the moment.</p>
+      <p>No settings for the moment.</p>
     </section>
     <section class="panel" id="colorpicker-tab">
       <h2>Appearance</h2>
-      <p>Change the position of icons app</p>
+      <p>Change the position of app's icons</p>
       <section id="position">
-        <li class="active">
+        <li id="position-left">
           <img src="../ressources/position-left.png" alt="Position Left" />
           <p>Left position</p>
         </li>
-        <li>
+        <li id="position-right">
           <img src="../ressources/position-right.png" alt="Position Right" />
           <p>Right position</p>
+        </li>
+      </section>
+      <p>Change the type of app's icons</p>
+      <section id="type-icons">
+        <li id="type-osx">
+          <img src="../ressources/osx-icons.png" alt="OSX Icons" />
+          <p>OSX Icons</p>
+        </li>
+        <li id="type-windows">
+          <img src="../ressources/windows-icons.png" alt="Windows Icons" />
+          <p>Windows Icons</p>
+        </li>
+        <li id="type-linux">
+          <img src="../ressources/linux-icons.png" alt="Linux Icons" />
+          <p>Linux Icons</p>
         </li>
       </section>
     </section>
     <section class="panel" id="picker-tab">
       <h2>Picker</h2>
-      <p>No settings here for the moment.</p>
+      <p>No settings for the moment.</p>
     </section>
     <section class="panel" id="colorsbook-tab">
       <h2>Colorsbook</h2>
-      <p>No settings here for the moment.</p>
+      <p>No settings for the moment.</p>
     </section>
     <section class="panel" id="about-tab">
       <h2>About</h2>
