feat(settings): can change icons type

--- a/src/views/settings.html
+++ b/src/views/settings.html
@@ -38,26 +38,26 @@
       <h2>Appearance</h2>
       <p>Change the position of app's icons</p>
       <section id="position">
-        <li id="position-left">
+        <li data-position="left">
           <img src="../ressources/position-left.png" alt="Position Left" />
           <p>Left position</p>
         </li>
-        <li id="position-right">
+        <li data-position="right">
           <img src="../ressources/position-right.png" alt="Position Right" />
           <p>Right position</p>
         </li>
       </section>
       <p>Change the type of app's icons</p>
       <section id="type-icons">
-        <li id="type-osx">
+        <li data-type="osx">
           <img src="../ressources/osx-icons.png" alt="OSX Icons" />
           <p>OSX Icons</p>
         </li>
-        <li id="type-windows">
+        <li data-type="windows">
           <img src="../ressources/windows-icons.png" alt="Windows Icons" />
           <p>Windows Icons</p>
         </li>
-        <li id="type-linux">
+        <li data-type="linux">
           <img src="../ressources/linux-icons.png" alt="Linux Icons" />
           <p>Linux Icons</p>
         </li>
