--- a/src/views/css/colorpicker.css
+++ b/src/views/css/colorpicker.css
@@ -103,7 +103,7 @@ a{color: inherit;text-decoration: none;}
         .darkMode .windows #close{ color: rgba(255, 255, 255, 0.4); }
       #close:hover{ color: #FC4B43; }
         .windows #close:hover{ color: rgba(0, 0, 0, 0.5); }
-        .windows #close:hover{ color: rgba(255, 255, 255, 0.6); }
+        .darkMode .windows #close:hover{ color: rgba(255, 255, 255, 0.6); }
     #tools p{
       color: rgba(0, 0, 0, 0.30);
       font-weight: bold;
