--- a/src/views/css/colorpicker.css
+++ b/src/views/css/colorpicker.css
@@ -99,11 +99,14 @@ a{color: inherit;text-decoration: none;}
         .windows #maximize:hover, .linux #maximize:hover{ color: rgba(0, 0, 0, 0.5); }
         .darkMode .windows #maximize:hover, .darkMode .linux #maximize:hover{ color: rgba(255, 255, 255, 0.6); }
       #close{ color: #FC635C; }
-        .windows #close{ color: rgba(0, 0, 0, 0.35); }
-        .darkMode .windows #close{ color: rgba(255, 255, 255, 0.4); }
+      .windows #close, .blured .linux #close{ color: rgba(0, 0, 0, 0.35); }
+      .darkMode .windows #close{ color: rgba(255, 255, 255, 0.4); }
       #close:hover{ color: #FC4B43; }
-        .windows #close:hover{ color: rgba(0, 0, 0, 0.5); }
-        .darkMode .windows #close:hover{ color: rgba(255, 255, 255, 0.6); }
+      .windows #close:hover{ color: rgba(0, 0, 0, 0.5); }
+      .darkMode .windows #close:hover{ color: rgba(255, 255, 255, 0.6); }
+      .blured .darwin #minimize, .blured .darwin #maximize, .blured .darwin #close{
+        color: #DDDDDD;
+      }
     #tools p{
       color: rgba(0, 0, 0, 0.30);
       font-weight: bold;
