--- a/src/views/colorpicker.html
+++ b/src/views/colorpicker.html
@@ -21,10 +21,11 @@
 			<ul id="tools">
 				<p id="top_button" title="Pin to Foreground"><i class="fa fa-map-pin"></i></p>
 				<p id="picker_button" title="Pick Color"><i class="fa fa-eyedropper"></i></p>
-				<p id="tags_button" title="Open Colorbook"><i class="fa fa-bookmark"></i></p>
+				<p id="tags_button" title="Open Colorsbook"><i class="fa fa-bookmark"></i></p>
 				<p id="shade_button" title="Toggle Shading"><i class="fa fa-tint"></i></p>
 				<p id="random_button" title="Set Random Color"><i class="fa fa-random"></i></p>
 				<p id="opacity_button" title="Toggle Opacity"><i class="fa fa-sliders"></i></p>
+				<p id="clean_button" title="Clean Vue"><i class="fa fa-adjust"></i></p>
 			</ul>
       <div id="settings"><i class="fa fa-cog"></i></div>
 		</div>
