--- a/src/views/settings.html
+++ b/src/views/settings.html
@@ -31,8 +31,24 @@
       </li>
     </header>
     <section class="panel active" id="general-tab">
-      <h2>General</h2>
-      <p>No settings for the moment.</p>
+      <h2>Colorpicker Tools</h2>
+      <p>Change your toolset</p>
+      <section id="toolset">
+        <div id="allTools">
+          <p id="settings_button" title="Clean Vue"><i class="fa fa-gear"></i></p>
+          <p id="opacity_button" title="Toggle Opacity"><i class="fa fa-sliders"></i></p>
+  				<p id="clean_button" title="Clean Vue"><i class="fa fa-adjust"></i></p>
+        </div>
+        <i class="arrow fa fa-arrow-right"></i>
+        <div id="selectedTools">
+          <p id="top_button" title="Pin to Foreground"><i class="fa fa-map-pin"></i></p>
+  				<p id="picker_button" title="Pick Color"><i class="fa fa-eyedropper"></i></p>
+  				<p id="tags_button" title="Open Colorsbook"><i class="fa fa-bookmark"></i></p>
+  				<p id="shade_button" title="Toggle Shading"><i class="fa fa-tint"></i></p>
+  				<p id="random_button" title="Set Random Color"><i class="fa fa-random"></i></p>
+
+        </div>
+      </section>
     </section>
     <section class="panel" id="colorpicker-tab">
       <h2>Appearance</h2>
