--- a/src/views/settings.html
+++ b/src/views/settings.html
@@ -39,7 +39,7 @@
           <p id="opacity_button" title="Toggle Opacity"><i class="fa fa-sliders"></i></p>
   				<p id="clean_button" title="Clean Vue"><i class="fa fa-adjust"></i></p>
         </div>
-        <i class="arrow fa fa-arrow-right"></i>
+        <i class="arrow fa fa-exchange"></i>
         <div id="selectedTools">
           <p id="top_button" title="Pin to Foreground"><i class="fa fa-map-pin"></i></p>
   				<p id="picker_button" title="Pick Color"><i class="fa fa-eyedropper"></i></p>
