--- a/src/views/settings.html
+++ b/src/views/settings.html
@@ -31,8 +31,10 @@
       </li>
     </header>
     <section class="panel active" id="general-tab">
+      <h2>Application</h2>
+      <p>Show Tray icon <i class="fa fa-toggle-off"></i></p>
       <h2>Colorpicker Tools</h2>
-      <p>Change your toolset</p>
+      <p>Change your toolset <span>(hover icon for description)</span></p>
       <section id="toolset">
         <div id="allTools">
           <p id="settings_button" title="Clean Vue"><i class="fa fa-gear"></i></p>
