--- a/src/views/settings.html
+++ b/src/views/settings.html
@@ -36,20 +36,9 @@
       <h2>Colorpicker Tools</h2>
       <p>Change your toolset <span>(hover icon for description)</span></p>
       <section id="toolset">
-        <div id="allTools">
-          <p id="settings_button" title="Clean Vue"><i class="fa fa-gear"></i></p>
-          <p id="opacity_button" title="Toggle Opacity"><i class="fa fa-sliders"></i></p>
-  				<p id="clean_button" title="Clean Vue"><i class="fa fa-adjust"></i></p>
-        </div>
+        <div id="allTools"></div>
         <i class="arrow fa fa-exchange"></i>
-        <div id="selectedTools">
-          <p id="top_button" title="Pin to Foreground"><i class="fa fa-map-pin"></i></p>
-  				<p id="picker_button" title="Pick Color"><i class="fa fa-eyedropper"></i></p>
-  				<p id="tags_button" title="Open Colorsbook"><i class="fa fa-bookmark"></i></p>
-  				<p id="shade_button" title="Toggle Shading"><i class="fa fa-tint"></i></p>
-  				<p id="random_button" title="Set Random Color"><i class="fa fa-random"></i></p>
-
-        </div>
+        <div id="selectedTools"></div>
       </section>
     </section>
     <section class="panel" id="colorpicker-tab">
