feat(colorsbook): init

--- a/src/views/colorpicker.html
+++ b/src/views/colorpicker.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Colorpicker</title>
 		<meta charset="utf-8" />
+		<link rel="stylesheet" href="css/app-buttons.css" />
 		<link rel="stylesheet" href="css/colorpicker.css" />
 		<link rel="stylesheet" href="css/font-awesome.min.css" />
 		<script defer src="js/color.class.js"></script>
@@ -11,7 +12,6 @@
 		<script defer src="js/util.class.js"></script>
 	</head>
 	<body>
-		<div id="contextMenu"></div>
 		<div class="toolbar">
 			<ul id="app_buttons">
 				<li id="close"><i></i></li>
