--- a/src/views/picker.html
+++ b/src/views/picker.html
@@ -10,43 +10,7 @@
   <body>
     <section id="border">
       <section id="picker">
-        <table>
-          <tr>
-            <td id="l0-0"></td>
-            <td id="l0-1"></td>
-            <td id="l0-2"></td>
-            <td id="l0-3"></td>
-            <td id="l0-4"></td>
-          </tr>
-          <tr>
-            <td id="l1-0"></td>
-            <td id="l1-1"></td>
-            <td id="l1-2"></td>
-            <td id="l1-3"></td>
-            <td id="l1-4"></td>
-          </tr>
-          <tr>
-            <td id="l2-0"></td>
-            <td id="l2-1"></td>
-            <td id="l2-2"></td>
-            <td id="l2-3"></td>
-            <td id="l2-4"></td>
-          </tr>
-          <tr>
-            <td id="l3-0"></td>
-            <td id="l3-1"></td>
-            <td id="l3-2"></td>
-            <td id="l3-3"></td>
-            <td id="l3-4"></td>
-          </tr>
-          <tr>
-            <td id="l4-0"></td>
-            <td id="l4-1"></td>
-            <td id="l4-2"></td>
-            <td id="l4-3"></td>
-            <td id="l4-4"></td>
-          </tr>
-        </table>
+        <table></table>
       </section>
     </section>
   </body>
