--- a/src/views/settings.html
+++ b/src/views/settings.html
@@ -71,8 +71,26 @@
       </section>
     </section>
     <section class="panel" id="picker-tab">
-      <h2>Picker</h2>
-      <p>No settings for the moment.</p>
+      <h2>Zoom Level</h2>
+      <p>Change zoom level for picker</p>
+      <section id="zoom-level">
+        <li data-zoom="3">
+          <img src="../ressources/zoom-3.png" alt="Zoom 3" />
+          <p>Zoom level 3</p>
+        </li>
+        <li data-zoom="5">
+          <img src="../ressources/zoom-5.png" alt="Zoom 5" />
+          <p>Zoom level 5</p>
+        </li>
+        <li data-zoom="7">
+          <img src="../ressources/zoom-7.png" alt="Zoom 7" />
+          <p>Zoom level 7</p>
+        </li>
+        <li data-zoom="11">
+          <img src="../ressources/zoom-11.png" alt="Zoom 11" />
+          <p>Zoom level 11</p>
+        </li>
+      </section>
     </section>
     <section class="panel" id="colorsbook-tab">
       <h2>Colorsbook</h2>
