feat(about): update about

--- a/src/views/settings.html
+++ b/src/views/settings.html
@@ -98,6 +98,14 @@
     </section>
     <section class="panel" id="about-tab">
       <h2>About</h2>
+      <p>Colopicker - version <span id="colorpicker-version"></span></p>
+      <p>Electron - version <span id="electron-version"></span></p>
+      <p>Node - version <span id="node-version"></span></p>
+      <p>Chrome - version <span id="chrome-version"></span></p>
+      <p>V8 - version <span id="v8-version"></span></p>
+      <h2>Update</h2>
+      <p>No update available</p>
+      <h2>Thank's part</h2>
       <p>Colorpicker is developed by Toinane with <i class="fa fa-heart"></i></p>
     </section>
   </body>
