feat(colorsbook): can add colors/categories with json

--- a/src/views/colorsbook.html
+++ b/src/views/colorsbook.html
@@ -19,33 +19,8 @@
       <ul id="tools"></ul>
     </div>
     <section id="main">
-      <section id="categories">
-        <li title="pastel" class="active"></li>
-        <li title="vif"></li>
-        <li id="new-categorie"><i class="fa fa-plus"></i></li>
-      </section>
-      <section id="colors">
-        <li data-color="#392390"></li>
-        <li data-color="#395320"></li>
-        <li data-color="#399920"></li>
-        <li data-color="#992320"></li>
-        <li data-color="#992320"></li>
-        <li data-color="#992320"></li>
-        <li data-color="#992320"></li>
-        <li data-color="#992320"></li>
-        <li data-color="#992320"></li>
-        <li data-color="#992320"></li>
-        <li data-color="#992320"></li>
-        <li data-color="#992320"></li>
-        <li data-color="#992320"></li>
-        <li data-color="#992320"></li>
-        <li data-color="#992320"></li>
-        <li data-color="#992320"></li>
-        <li data-color="#992320"></li>
-        <li data-color="#992320"></li>
-        <li data-color="#992320"></li>
-        <li id="new-color"><i class="fa fa-plus"></i></li>
-      </section>
+      <section id="categories"></section>
+      <section id="colors"></section>
     </section>
   </body>
 </html>
