style(icons): update icons

--- a/src/views/about.html
+++ b/src/views/about.html
@@ -8,7 +8,7 @@
     <script defer src="./js/about.js"></script>
   </head>
   <body>
-    <img src="../../build/logo.png" alt="Logo Colorpicker" />
+    <img src="../../build/icon.png" alt="Logo Colorpicker" />
     <h1>Colorpicker</h1>
     <section>
       <p id="version">Release <span>{...}</span></p>
