--- a/src/views/support.html
+++ b/src/views/support.html
@@ -7,7 +7,7 @@
       html{
         margin: 0; padding: 0;
         height: 100%;
-        border: 3px solid red;
+        /*border: 3px solid red;*/
         cursor: crosshair;
         box-sizing: border-box;
       }
